--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background: #fff;
+  background:azure;
 }
 .dropdown {
   position: relative;
@@ -26,7 +26,6 @@ body {
   color: #c5c6c7;
 }
 .dropdown-menu li a:hover {
-  /* background-color: #45a29e; */
   text-decoration: underline;
   color: white;
 }
@@ -47,11 +46,9 @@ input{
     background-color: #6b6d6e02;
     border: 1px solid gray;
     padding: 10px;
-    /* border-color: rgb(228, 222, 222); */
-    /* border-radius: 3px; */
 }
 .navbar button:hover{
-    background-color: red;
+    background-color: purple;
     color: white;
 }
 .navbar{
@@ -78,23 +75,16 @@ input{
  line-height: 1.8;
 }
 .spacex-bg-container h2{
- /* margin-bottom: 30px; */
  font-size: xx-large;
 }
 .spacex{
     display: flex;
-    /* flex-wrap: wrap;
-    flex-direction: row; */
     justify-content: space-around;
-     /* margin-top: 20px; */
      align-items: center;
-     /* padding: 20px; */
      padding-bottom: 50px;
 }
 .spacex-content {
     display:flex ;
-    /* flex-wrap: wrap; */
-    /* justify-content: space-between; */
     gap: 20px;
 }
 .spacex-content img{
@@ -111,7 +101,6 @@ input{
 }
 .spacex-bg-img  {
     background-image: url("https://scitechdaily.com/images/NASA-SpaceX-CRS-27-Falcon-9-Rocket-Before-Liftoff-scaled.jpg");
-    /* background-repeat: repeat-x; */
     background-size: cover;
     width: 93%;
     color: white;
@@ -134,7 +123,7 @@ input{
 
 }
 .fa{
-    background-color: red; 
+    background-color:purple; 
     border-radius: 50%;
      padding: 10px;
 }
@@ -146,7 +135,7 @@ input{
      border:1px solid white;
 }
 .spacex-bg-content img:hover{
-border: 2px solid blue;
+border: 2px solid purple;
 }
 .play-img{
   display: flex;
@@ -181,30 +170,11 @@ border: 2px solid blue;
     /* flex-direction: row; */
 
 }
-.feature1 img{
-    border-radius: 50%; 
-     width:50px;
-     height: 50px;
-     margin-top:10px;
-     border:1px solid white;
-}
-.feature1{
-    /* display: flex; */
-    /* align-items: center; */
-    /* flex-wrap: wrap;
-    align-self: baseline; */
-    /* display: block; */
-    /* padding: 20px; */
-    /* width: 200px; */
-    font-size: small;
-   
-}
+
 .moon-finalist{
     margin-top: 50px;
-    background-image: url('https://www.nasa.gov/wp-content/uploads/2025/08/54424457066-ab8a9d0ed0-o.jpg');
+    background-image: url('https://th.bing.com/th/id/OIP.kq7i3ZR_TtcF6kPWTENQqAHaEJ?w=264&h=180&c=7&r=0&o=7&dpr=1.5&pid=1.7&rm=3');
     background-size: cover;
-    /* background-repeat: no-repeat;
-       width: 93%; */
     color: white;
     padding: 50px;
     
@@ -215,7 +185,7 @@ border: 2px solid blue;
 }
 .moon-finalist div{
     width: 500px;
-    /* align-self: center; */
+
     line-height: 1.6;
 
 }
@@ -248,10 +218,7 @@ border: 2px solid blue;
       left: 30%;
       transform: translate(-50%, -50%);
       color: white;
-      /* font-size: 14px; */
       font-weight: bold;
-      /* background-color: rgba(0, 0, 0, 0.5);  */
-      /* Semi-transparent background */
       padding: 10px 20px;
       border-radius: 5px;
    
@@ -288,7 +255,6 @@ width: 300px;
 }
 .galleries{
     display: flex;
-    /* flex-wrap: wrap; */
     justify-content: space-between;
     margin-top: 50px;
     margin-left: 20px;
@@ -306,28 +272,20 @@ width: 300px;
     align-items: center;
     justify-content:space-around ;
     
+    
 }
 .img1 img{
-    height: 270px;
+    height: 300px;
 }
-/* .signup-img{
-    position: relative;
-    display: inline-block;
-}
-.signup-contents{
-    position: absolute;
-    left:60%;
-    top: 100%;
-    transform: translate(-50%, -50%);
-      padding: 10px 20px;
-      border-radius: 5px;
-
-} */
+.img2 img{
+  height: 150px;
+} 
  .signup-container {
-  /* max-width: 800px; */
   margin: auto;
-  background-image: url('https://www.nasa.gov/wp-content/uploads/2023/01/webb-tarantula-neb.png?w=1536');
+  background-image: url('https://th.bing.com/th/id/OIP.kq7i3ZR_TtcF6kPWTENQqAHaEJ?w=264&h=180&c=7&r=0&o=7&dpr=1.5&pid=1.7&rm=3');
   color: white;
+  background-repeat: no-repeat;
+  background-size: cover;
   padding: 50px;
  
 }
